--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@
 # The email address is not required for organizations.
 #
 Jason Dobry <jason.dobry@gmail.com>
+Nick Escallon <nickescallon@gmail.com>
