--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@
 #
 # The email address is not required for organizations.
 #
+Greenkeeper <support@greenkeeper.io>
 Jason Dobry <jason.dobry@gmail.com>
 Nick Escallon <nickescallon@gmail.com>
 Nick Vahalik <nick@nickvahalik.com>
