--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,4 @@ Greenkeeper <support@greenkeeper.io>
 Jason Dobry <jason.dobry@gmail.com>
 Nick Escallon <nickescallon@gmail.com>
 Nick Vahalik <nick@nickvahalik.com>
+Sergii Stotskyi <sergiy.stotskiy@gmail.com>
